# model-odometry

./: README.md
odometry_misc/: package.xml  requirements.txt  setup.cfg  setup.py
odometry_misc/Model/: OdometryDataset.py  OptunaLoadStudy.py  OptunaScript.py  SimpleModel.py  data_to_use.csv  labels_to_use.csv  load_model.py  train_model.py
odometry_misc/launch/: measure_odometry.launch
odometry_misc/odometry_misc/: measure_odometry.py  measure_odometry_real_world.py  model_odometry.py
odometry_misc/scripts/: normalize_sample.py  process_further.py  process_rosbags.py  process_tsv.py  test_dataset.py  transforms_for_odom.py
